// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI|Settings/AboutScreen failed to fetch new version 1`] = `
.emotion-21 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background: rgba(255,255,255,1);
  color: #999999;
  height: 40px;
  position: relative;
  overflow: visible;
  overflow-x: visible;
  overflow-y: visible;
  background: rgba(255,255,255,1) linear-gradient(to bottom,transparent calc(100% - 1px),rgba(0,0,0,0.1) calc(100% - 1px));
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-2 > * {
  margin-left: 15px;
}

.emotion-1 {
  white-space: nowrap;
  height: 100%;
  padding-bottom: 50px;
  overflow-x: visisble;
  overflow-y: visisble;
}

.emotion-1:first-child {
  margin-left: 0;
}

.emotion-0 {
  white-space: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0 15px;
  text-transform: capitalize;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
  height: 40px;
  line-height: 12px;
  cursor: pointer;
  background: transparent;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  font-weight: bold;
  font-size: 13px;
  color: #1EA7FD;
  border-bottom-color: #1EA7FD;
}

.emotion-0:empty {
  display: none;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 > * {
  margin-right: 15px;
}

.emotion-5 {
  height: 40px;
  background: none;
  color: inherit;
  padding: 0;
  cursor: pointer;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
}

.emotion-5:hover,
.emotion-5:focus {
  outline: 0 none;
  color: #1EA7FD;
}

.emotion-5 > svg {
  width: 15px;
}

.emotion-4 {
  display: block;
}

.emotion-3 {
  fill: currentColor;
}

.emotion-20 {
  display: block;
  position: relative;
  position: relative;
  overflow: auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
}

.emotion-18 {
  padding: 20px;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 600px;
  margin: 0 auto;
}

@media screen and (max-width:500px) {
  .emotion-11 {
    display: block;
  }
}

.emotion-10 {
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-bottom: 20px;
  margin-bottom: 20px;
  border-bottom: 1px solid rgba(0,0,0,0.1);
}

.emotion-8 {
  font-size: 30px;
  display: inline-block;
  line-height: 40px;
  font-weight: 700;
}

.emotion-9 {
  background: #DAFFD1;
  color: #4DC533;
  float: right;
  height: 40px;
  box-sizing: border-box;
  padding: 10px 25px;
  border-radius: 20px;
}

@media screen and (max-width:500px) {
  .emotion-9 {
    float: none;
    margin-top: 10px;
    display: block;
    text-align: center;
  }
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-top: 20px;
  margin-top: 20px;
  border-top: 1px solid rgba(0,0,0,0.1);
}

.emotion-16 > * {
  margin-left: 20px;
}

.emotion-16 > *:first-child {
  margin-left: 0;
}

.emotion-13 {
  color: inherit;
}

<div
  class="emotion-21"
>
  <div
    class="emotion-7"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-1"
        role="tablist"
      >
        <button
          class="emotion-0"
          role="tab"
          type="button"
        >
          About
        </button>
      </div>
    </div>
    <div
      class="emotion-6"
    >
      <button
        class="emotion-5"
      >
        <svg
          class="emotion-4"
          height="20px"
          viewBox="0 0 1024 1024"
          width="20px"
        >
          <path
            class="emotion-3"
            d="M586.7 512L936 861.4a52.8 52.8 0 0 1-74.6 74.7L512 586.7 162.6 936A52.8 52.8 0 0 1 88 861.4L437.3 512 88 162.6A52.8 52.8 0 1 1 162.6 88L512 437.3 861.4 88a52.8 52.8 0 1 1 74.7 74.7L586.7 512z"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="emotion-20"
  >
    <div
      class="emotion-4"
      role="tabpanel"
    >
      <div
        class="emotion-18"
      >
        <div
          class="emotion-11"
        >
          <header
            class="emotion-10"
          >
            <svg
              height="64px"
              title="Storybook icon"
              viewBox="0 0 64 64"
              width="64px"
            >
              <defs>
                <path
                  d="M2 58.6L0 6c0-1.7 1.3-3.2 3-3.3L47.6 0A3.2 3.2 0 0 1 51 3.2v57.2a3.2 3.2 0 0 1-3.3 3.2L5 61.6c-1.6 0-3-1.4-3-3z"
                  id="a"
                />
              </defs>
              <g
                fill="none"
                fill-rule="evenodd"
                transform="translate(6.6 .2)"
              >
                <mask
                  fill="#fff"
                  id="b"
                >
                  <use
                    href="#a"
                  />
                </mask>
                <use
                  fill="#FF4785"
                  fill-rule="nonzero"
                  href="#a"
                />
                <path
                  d="M37.7 7.8L38 .5 44 0l.3 7.6a.5.5 0 0 1-.8.4l-2.4-2-2.8 2.2a.5.5 0 0 1-.7-.4zM29.8 24c0 1.2 8.4.6 9.5-.3 0-8.4-4.5-12.9-12.8-12.9s-13 4.5-13 11.3c0 11.8 16 12 16 18.5 0 1.8-1 2.9-3 2.9-2.4 0-3.5-1.3-3.3-5.7 0-1-9.7-1.3-10 0-.8 10.6 5.9 13.7 13.5 13.7 7.4 0 13.2-4 13.2-11 0-12.7-16.2-12.3-16.2-18.6 0-2.6 1.9-2.9 3-2.9 1.2 0 3.3.2 3.1 5z"
                  fill="#FFF"
                  fill-rule="nonzero"
                  mask="url(#b)"
                />
              </g>
            </svg>
            <span
              class="emotion-8"
            >
              Storybook 5.0.0
            </span>
            <span
              class="emotion-9"
            >
              You're up to date
            </span>
          </header>
        </div>
        <div
          class="emotion-11"
        >
          Cannot currently fetch the latest version from Storybook. Try 
          <a
            href="https://github.com/storybooks/storybook/blob/master/CHANGELOG.md"
          >
            reading the full changelog
          </a>
        </div>
        <div
          class="emotion-11"
        >
          <div
            class="emotion-16"
          >
            <a
              class="emotion-13"
              href="https://storybook.js.org"
            >
              Storybook docs
            </a>
            <a
              class="emotion-13"
              href="https://github.com/storybooks/storybook"
            >
              GitHub
            </a>
            <a
              class="emotion-13"
              href="https://storybook.js.org/support"
            >
              Support
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots UI|Settings/AboutScreen new version required 1`] = `
.emotion-41 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background: rgba(255,255,255,1);
  color: #999999;
  height: 40px;
  position: relative;
  overflow: visible;
  overflow-x: visible;
  overflow-y: visible;
  background: rgba(255,255,255,1) linear-gradient(to bottom,transparent calc(100% - 1px),rgba(0,0,0,0.1) calc(100% - 1px));
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-2 > * {
  margin-left: 15px;
}

.emotion-1 {
  white-space: nowrap;
  height: 100%;
  padding-bottom: 50px;
  overflow-x: visisble;
  overflow-y: visisble;
}

.emotion-1:first-child {
  margin-left: 0;
}

.emotion-0 {
  white-space: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0 15px;
  text-transform: capitalize;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
  height: 40px;
  line-height: 12px;
  cursor: pointer;
  background: transparent;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  font-weight: bold;
  font-size: 13px;
  color: #1EA7FD;
  border-bottom-color: #1EA7FD;
}

.emotion-0:empty {
  display: none;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 > * {
  margin-right: 15px;
}

.emotion-5 {
  height: 40px;
  background: none;
  color: inherit;
  padding: 0;
  cursor: pointer;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
}

.emotion-5:hover,
.emotion-5:focus {
  outline: 0 none;
  color: #1EA7FD;
}

.emotion-5 > svg {
  width: 15px;
}

.emotion-4 {
  display: block;
}

.emotion-3 {
  fill: currentColor;
}

.emotion-40 {
  display: block;
  position: relative;
  position: relative;
  overflow: auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
}

.emotion-38 {
  padding: 20px;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 600px;
  margin: 0 auto;
}

@media screen and (max-width:500px) {
  .emotion-11 {
    display: block;
  }
}

.emotion-10 {
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-bottom: 20px;
  margin-bottom: 20px;
  border-bottom: 1px solid rgba(0,0,0,0.1);
}

.emotion-8 {
  font-size: 30px;
  display: inline-block;
  line-height: 40px;
  font-weight: 700;
}

.emotion-12 {
  width: 160px;
}

.emotion-13 {
  float: right;
  font-weight: normal;
  font-size: 11px;
  color: rgba(0,0,0,0.4);
}

.emotion-36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-top: 20px;
  margin-top: 20px;
  border-top: 1px solid rgba(0,0,0,0.1);
}

.emotion-36 > * {
  margin-left: 20px;
}

.emotion-36 > *:first-child {
  margin-left: 0;
}

.emotion-33 {
  color: inherit;
}

.emotion-9 {
  background: #1EA7FD;
  color: black;
  float: right;
  height: 40px;
  box-sizing: border-box;
  padding: 10px 25px;
  border-radius: 20px;
}

@media screen and (max-width:500px) {
  .emotion-9 {
    float: none;
    margin-top: 10px;
    display: block;
    text-align: center;
  }
}

.emotion-31 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-top: 20px;
  margin-top: 20px;
  border-top: 1px solid rgba(0,0,0,0.1);
}

.emotion-15 {
  color: currentColor;
  font-weight: normal;
  font-family: "Nunito Sans",-apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 0;
  line-height: 1.2em;
  display: block;
  color: #333;
  line-height: 1em;
}

.emotion-15 > sub {
  display: block;
  padding-top: 5px;
  line-height: 1.2em;
  font-size: 14px;
}

.emotion-15 > sub {
  color: rgba(0,0,0,0.4);
}

.emotion-23 {
  position: relative;
  overflow: hidden;
  border: 1px solid rgba(0,0,0,0.1);
  border-radius: 4px;
  background: rgba(255,255,255,1);
}

.emotion-19 {
  position: relative;
  overflow: auto;
}

.emotion-19 code {
  padding-right: 10px;
  opacity: 0.7;
}

.emotion-19 * .token {
  font-family: "Operator Mono","Fira Code Retina","Fira Code","FiraCode-Retina","Andale Mono","Lucida Console",Consolas,Monaco,monospace;
  -webkit-font-smoothing: antialiased;
}

.emotion-19 * .token.comment {
  color: #008000;
  font-style: italic;
}

.emotion-19 * .token.prolog {
  color: #008000;
  font-style: italic;
}

.emotion-19 * .token.doctype {
  color: #008000;
  font-style: italic;
}

.emotion-19 * .token.cdata {
  color: #008000;
  font-style: italic;
}

.emotion-19 * .token.string {
  color: #A31515;
}

.emotion-19 * .token.punctuation {
  color: #393A34;
}

.emotion-19 * .token.operator {
  color: #393A34;
}

.emotion-19 * .token.url {
  color: #36acaa;
}

.emotion-19 * .token.symbol {
  color: #36acaa;
}

.emotion-19 * .token.number {
  color: #36acaa;
}

.emotion-19 * .token.boolean {
  color: #36acaa;
}

.emotion-19 * .token.variable {
  color: #36acaa;
}

.emotion-19 * .token.constant {
  color: #36acaa;
}

.emotion-19 * .token.inserted {
  color: #36acaa;
}

.emotion-19 * .token.atrule {
  color: #0000ff;
}

.emotion-19 * .token.keyword {
  color: #0000ff;
}

.emotion-19 * .token.attr-value {
  color: #0000ff;
}

.emotion-19 * .token.function {
  color: #393A34;
}

.emotion-19 * .token.deleted {
  color: #9a050f;
}

.emotion-19 * .token.important {
  font-weight: bold;
}

.emotion-19 * .token.bold {
  font-weight: bold;
}

.emotion-19 * .token.italic {
  font-style: italic;
}

.emotion-19 * .token.class-name {
  color: #2B91AF;
}

.emotion-19 * .token.tag {
  color: #800000;
}

.emotion-19 * .token.selector {
  color: #800000;
}

.emotion-19 * .token.attr-name {
  color: #ff0000;
}

.emotion-19 * .token.property {
  color: #ff0000;
}

.emotion-19 * .token.regex {
  color: #ff0000;
}

.emotion-19 * .token.entity {
  color: #ff0000;
}

.emotion-19 * .token.directive.tag .tag {
  background: #ffff00;
  color: #393A34;
}

.emotion-19 * .language-json .token.boolean {
  color: #0000ff;
}

.emotion-19 * .language-json .token.number {
  color: #0000ff;
}

.emotion-19 * .language-json .token.property {
  color: #2B91AF;
}

.emotion-19 * .namespace {
  opacity: 0.7;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0;
  padding: 10px;
}

.emotion-17 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-right: 0;
  opacity: 1;
}

.emotion-22 {
  position: absolute;
  bottom: 0;
  right: 0;
  max-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  margin: 0;
  padding: 0;
  border-top: 1px solid rgba(0,0,0,0.1);
  border-left: 1px solid rgba(0,0,0,0.1);
  background: rgba(255,255,255,1);
  border-radius: 4px 0 0 0;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  list-style: none;
  padding: 0;
  height: 26px;
  font-size: 11px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  text-transform: uppercase;
  border-left: 0 none;
}

.emotion-20 {
  border: 0 none;
  display: block;
  background: none;
  padding: 0 10px;
  cursor: pointer;
  text-transform: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  font-size: inherit;
  color: inherit;
  border-top: 2px solid transparent;
  border-bottom: 2px solid transparent;
}

.emotion-20:focus {
  border-bottom: 2px solid #1EA7FD;
  outline: 0 none;
}

<div
  class="emotion-41"
>
  <div
    class="emotion-7"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-1"
        role="tablist"
      >
        <button
          class="emotion-0"
          role="tab"
          type="button"
        >
          About
        </button>
      </div>
    </div>
    <div
      class="emotion-6"
    >
      <button
        class="emotion-5"
      >
        <svg
          class="emotion-4"
          height="20px"
          viewBox="0 0 1024 1024"
          width="20px"
        >
          <path
            class="emotion-3"
            d="M586.7 512L936 861.4a52.8 52.8 0 0 1-74.6 74.7L512 586.7 162.6 936A52.8 52.8 0 0 1 88 861.4L437.3 512 88 162.6A52.8 52.8 0 1 1 162.6 88L512 437.3 861.4 88a52.8 52.8 0 1 1 74.7 74.7L586.7 512z"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="emotion-40"
  >
    <div
      class="emotion-4"
      role="tabpanel"
    >
      <div
        class="emotion-38"
      >
        <div
          class="emotion-11"
        >
          <header
            class="emotion-10"
          >
            <svg
              height="64px"
              title="Storybook icon"
              viewBox="0 0 64 64"
              width="64px"
            >
              <defs>
                <path
                  d="M2 58.6L0 6c0-1.7 1.3-3.2 3-3.3L47.6 0A3.2 3.2 0 0 1 51 3.2v57.2a3.2 3.2 0 0 1-3.3 3.2L5 61.6c-1.6 0-3-1.4-3-3z"
                  id="a"
                />
              </defs>
              <g
                fill="none"
                fill-rule="evenodd"
                transform="translate(6.6 .2)"
              >
                <mask
                  fill="#fff"
                  id="b"
                >
                  <use
                    href="#a"
                  />
                </mask>
                <use
                  fill="#FF4785"
                  fill-rule="nonzero"
                  href="#a"
                />
                <path
                  d="M37.7 7.8L38 .5 44 0l.3 7.6a.5.5 0 0 1-.8.4l-2.4-2-2.8 2.2a.5.5 0 0 1-.7-.4zM29.8 24c0 1.2 8.4.6 9.5-.3 0-8.4-4.5-12.9-12.8-12.9s-13 4.5-13 11.3c0 11.8 16 12 16 18.5 0 1.8-1 2.9-3 2.9-2.4 0-3.5-1.3-3.3-5.7 0-1-9.7-1.3-10 0-.8 10.6 5.9 13.7 13.5 13.7 7.4 0 13.2-4 13.2-11 0-12.7-16.2-12.3-16.2-18.6 0-2.6 1.9-2.9 3-2.9 1.2 0 3.3.2 3.1 5z"
                  fill="#FFF"
                  fill-rule="nonzero"
                  mask="url(#b)"
                />
              </g>
            </svg>
            <span
              class="emotion-8"
            >
              Storybook 5.0.0
            </span>
            <span
              class="emotion-9"
            >
              Update available
            </span>
          </header>
        </div>
        <div
          class="emotion-11"
        >
          <aside
            class="emotion-12"
          >
            <div>
              Latest version
            </div>
            <div>
              <strong>
                5.0.3
              </strong>
            </div>
          </aside>
          <ul>
            <li>
              upgrade webpack & babel to latest
            </li>
            <li>
              new addParameters and third argument to .add to pass data to addons
            </li>
            <li>
              added the ability to theme storybook
            </li>
            <li>
              improved ui for mobile devices
            </li>
            <li>
              improved performance of addon-knobs
            </li>
          </ul>
          <a
            class="emotion-13"
            href="https://github.com/storybooks/storybook/blob/master/CHANGELOG.md"
            rel="noopener noreferrer"
            target="_blank"
          >
            Read full changelog
          </a>
        </div>
        <div
          class="emotion-11"
        >
          <div
            class="emotion-31"
          >
            <header
              class="emotion-16"
            >
              <h1
                class="emotion-15"
              >
                <span>
                  Upgrade all storybook packages to latest:
                </span>
              </h1>
            </header>
            <div
              class="emotion-23"
            >
              <div
                class="emotion-19"
              >
                <pre
                  class="hljs emotion-18"
                >
                  <code
                    class="emotion-17"
                  >
                    npx npm-check-updates 
                    <span
                      class="token string"
                    >
                      '/storybook/'
                    </span>
                     -u 
                    <span
                      class="token operator"
                    >
                      &&
                    </span>
                     yarn
                  </code>
                </pre>
              </div>
              <ul
                class="emotion-22"
              >
                <li
                  class="emotion-21"
                >
                  <button
                    class="emotion-20"
                  >
                    copy
                  </button>
                </li>
              </ul>
            </div>
            <p>
              Alternatively if you're using a yarn you could run the following command, and check all storybook related packages:
            </p>
            <div
              class="emotion-23"
            >
              <div
                class="emotion-19"
              >
                <pre
                  class="hljs emotion-18"
                >
                  <code
                    class="emotion-17"
                  >
                    yarn upgrade-interactive --latest
                  </code>
                </pre>
              </div>
              <ul
                class="emotion-22"
              >
                <li
                  class="emotion-21"
                >
                  <button
                    class="emotion-20"
                  >
                    copy
                  </button>
                </li>
              </ul>
            </div>
          </div>
        </div>
        <div
          class="emotion-11"
        >
          <div
            class="emotion-36"
          >
            <a
              class="emotion-33"
              href="https://storybook.js.org"
            >
              Storybook docs
            </a>
            <a
              class="emotion-33"
              href="https://github.com/storybooks/storybook"
            >
              GitHub
            </a>
            <a
              class="emotion-33"
              href="https://storybook.js.org/support"
            >
              Support
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots UI|Settings/AboutScreen up to date 1`] = `
.emotion-23 {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background: rgba(255,255,255,1);
  color: #999999;
  height: 40px;
  position: relative;
  overflow: visible;
  overflow-x: visible;
  overflow-y: visible;
  background: rgba(255,255,255,1) linear-gradient(to bottom,transparent calc(100% - 1px),rgba(0,0,0,0.1) calc(100% - 1px));
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-2 > * {
  margin-left: 15px;
}

.emotion-1 {
  white-space: nowrap;
  height: 100%;
  padding-bottom: 50px;
  overflow-x: visisble;
  overflow-y: visisble;
}

.emotion-1:first-child {
  margin-left: 0;
}

.emotion-0 {
  white-space: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0 15px;
  text-transform: capitalize;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
  height: 40px;
  line-height: 12px;
  cursor: pointer;
  background: transparent;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  font-weight: bold;
  font-size: 13px;
  color: #1EA7FD;
  border-bottom-color: #1EA7FD;
}

.emotion-0:empty {
  display: none;
}

.emotion-0:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 > * {
  margin-right: 15px;
}

.emotion-5 {
  height: 40px;
  background: none;
  color: inherit;
  padding: 0;
  cursor: pointer;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
}

.emotion-5:hover,
.emotion-5:focus {
  outline: 0 none;
  color: #1EA7FD;
}

.emotion-5 > svg {
  width: 15px;
}

.emotion-4 {
  display: block;
}

.emotion-3 {
  fill: currentColor;
}

.emotion-22 {
  display: block;
  position: relative;
  position: relative;
  overflow: auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
}

.emotion-20 {
  padding: 20px;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 600px;
  margin: 0 auto;
}

@media screen and (max-width:500px) {
  .emotion-11 {
    display: block;
  }
}

.emotion-10 {
  display: block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-bottom: 20px;
  margin-bottom: 20px;
  border-bottom: 1px solid rgba(0,0,0,0.1);
}

.emotion-8 {
  font-size: 30px;
  display: inline-block;
  line-height: 40px;
  font-weight: 700;
}

.emotion-9 {
  background: #DAFFD1;
  color: #4DC533;
  float: right;
  height: 40px;
  box-sizing: border-box;
  padding: 10px 25px;
  border-radius: 20px;
}

@media screen and (max-width:500px) {
  .emotion-9 {
    float: none;
    margin-top: 10px;
    display: block;
    text-align: center;
  }
}

.emotion-12 {
  width: 160px;
}

.emotion-13 {
  float: right;
  font-weight: normal;
  font-size: 11px;
  color: rgba(0,0,0,0.4);
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-top: 20px;
  margin-top: 20px;
  border-top: 1px solid rgba(0,0,0,0.1);
}

.emotion-18 > * {
  margin-left: 20px;
}

.emotion-18 > *:first-child {
  margin-left: 0;
}

.emotion-15 {
  color: inherit;
}

<div
  class="emotion-23"
>
  <div
    class="emotion-7"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-1"
        role="tablist"
      >
        <button
          class="emotion-0"
          role="tab"
          type="button"
        >
          About
        </button>
      </div>
    </div>
    <div
      class="emotion-6"
    >
      <button
        class="emotion-5"
      >
        <svg
          class="emotion-4"
          height="20px"
          viewBox="0 0 1024 1024"
          width="20px"
        >
          <path
            class="emotion-3"
            d="M586.7 512L936 861.4a52.8 52.8 0 0 1-74.6 74.7L512 586.7 162.6 936A52.8 52.8 0 0 1 88 861.4L437.3 512 88 162.6A52.8 52.8 0 1 1 162.6 88L512 437.3 861.4 88a52.8 52.8 0 1 1 74.7 74.7L586.7 512z"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="emotion-22"
  >
    <div
      class="emotion-4"
      role="tabpanel"
    >
      <div
        class="emotion-20"
      >
        <div
          class="emotion-11"
        >
          <header
            class="emotion-10"
          >
            <svg
              height="64px"
              title="Storybook icon"
              viewBox="0 0 64 64"
              width="64px"
            >
              <defs>
                <path
                  d="M2 58.6L0 6c0-1.7 1.3-3.2 3-3.3L47.6 0A3.2 3.2 0 0 1 51 3.2v57.2a3.2 3.2 0 0 1-3.3 3.2L5 61.6c-1.6 0-3-1.4-3-3z"
                  id="a"
                />
              </defs>
              <g
                fill="none"
                fill-rule="evenodd"
                transform="translate(6.6 .2)"
              >
                <mask
                  fill="#fff"
                  id="b"
                >
                  <use
                    href="#a"
                  />
                </mask>
                <use
                  fill="#FF4785"
                  fill-rule="nonzero"
                  href="#a"
                />
                <path
                  d="M37.7 7.8L38 .5 44 0l.3 7.6a.5.5 0 0 1-.8.4l-2.4-2-2.8 2.2a.5.5 0 0 1-.7-.4zM29.8 24c0 1.2 8.4.6 9.5-.3 0-8.4-4.5-12.9-12.8-12.9s-13 4.5-13 11.3c0 11.8 16 12 16 18.5 0 1.8-1 2.9-3 2.9-2.4 0-3.5-1.3-3.3-5.7 0-1-9.7-1.3-10 0-.8 10.6 5.9 13.7 13.5 13.7 7.4 0 13.2-4 13.2-11 0-12.7-16.2-12.3-16.2-18.6 0-2.6 1.9-2.9 3-2.9 1.2 0 3.3.2 3.1 5z"
                  fill="#FFF"
                  fill-rule="nonzero"
                  mask="url(#b)"
                />
              </g>
            </svg>
            <span
              class="emotion-8"
            >
              Storybook 5.0.0
            </span>
            <span
              class="emotion-9"
            >
              You're up to date
            </span>
          </header>
        </div>
        <div
          class="emotion-11"
        >
          <aside
            class="emotion-12"
          >
            <div>
              Latest version
            </div>
            <div>
              <strong>
                5.0.0
              </strong>
            </div>
          </aside>
          <ul>
            <li>
              upgrade webpack & babel to latest
            </li>
            <li>
              new addParameters and third argument to .add to pass data to addons
            </li>
            <li>
              added the ability to theme storybook
            </li>
            <li>
              improved ui for mobile devices
            </li>
            <li>
              improved performance of addon-knobs
            </li>
          </ul>
          <a
            class="emotion-13"
            href="https://github.com/storybooks/storybook/blob/master/CHANGELOG.md"
            rel="noopener noreferrer"
            target="_blank"
          >
            Read full changelog
          </a>
        </div>
        <div
          class="emotion-11"
        >
          <div
            class="emotion-18"
          >
            <a
              class="emotion-15"
              href="https://storybook.js.org"
            >
              Storybook docs
            </a>
            <a
              class="emotion-15"
              href="https://github.com/storybooks/storybook"
            >
              GitHub
            </a>
            <a
              class="emotion-15"
              href="https://storybook.js.org/support"
            >
              Support
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
